--- a/cart.html
+++ b/cart.html
@@ -53,18 +53,18 @@
 
 
         <!-- Left links -->
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <ul class="navbar-nav me-auto mb-1 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="/index.html">INICIO</a>
+            <a class="nav-link" href="/gabexamen/index.html">INICIO</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/contacto.html">CONTACTANOS</a>
+            <a class="nav-link" href="/gabexamen/contacto.html">CONTACTANOS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/adoptame.html">ADOPTA UNA VIDA</a>
+            <a class="nav-link" href="/gabexamen/adoptame.html">ADOPTA UNA VIDA</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/donacion.html">DONACIONES</a>
+            <a class="nav-link" href="/gabexamen/donacion.html">TIENDA</a>
           </li>
         </ul>
 
