--- a/store.html
+++ b/store.html
@@ -53,18 +53,18 @@
           />
         </a>
         <!-- Left links -->
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <ul class="navbar-nav me-auto mb-1 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="/index.html">INICIO</a>
+            <a class="nav-link" href="/gabexamen/index.html">INICIO</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">SOBRE NOSOTROS</a>
+            <a class="nav-link" href="/gabexamen/contacto.html">CONTACTANOS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">CONTACTO</a>
+            <a class="nav-link" href="/gabexamen/adoptame.html">ADOPTA UNA VIDA</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">TIENDA VIRTUAL</a>
+            <a class="nav-link" href="/gabexamen/donacion.html">TIENDA</a>
           </li>
         </ul>
 
